test/files/neg/t8015-ffb.check
t8015-ffb.scala:12: warning: side-effecting nullary methods are discouraged: suggest defining as `def w()` instead
  def w = { x\u000c() }       // There is a FF (^L) between the `x` and the `()`, which may be hardly or invisible
      ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
